name:                pmcts
category:            Data
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
cabal-version:       >=1.10
author:              Joseph Rock
maintainer:          Joseph Rock <wax818@gmail.com>
homepage:            https://github.com/j-rock/pmcts
bug-reports:         https://github.com/j-rock/pmcts
copyright:           Copyright (C) 2016 Joseph Rock
synopsis:            Parallel monte carlo tree search
build-type:          Simple
tested-with:         GHC == 7.10.3
extra-source-files:
  README.md

source-repository head
  type: git
  location: git://github.com/j-rock/pmcts.git

executable main
  default-language:    Haskell2010
  ghc-options:         -O2
  hs-source-dirs:      exec-src
  main-is:             Main.hs
  build-depends:
    base               >= 4.7 && < 5,
    pmcts

library
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -threaded -with-rtsopts=-N2
  hs-source-dirs:      src, src/Data
  build-depends:
    base               >= 4.7   && < 5,
    async              >= 2.1   && < 2.2,
    MonadRandom        >= 0.4   && < 0.5,
    time               >= 1.5   && < 1.6
  exposed-modules:
    Data.MCTS
